--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,11 +1,7 @@
-h1 {
-  color: tomato
+.comtact h2{
+  color: tomato;
 }
-
-.stranger {
-  color: orange
-}
-
-.name {
-  color: cornflowerblue;
+.contact .contact-form label{
+  display: inline-block;
+  width: 70px;
 }
